# firefight-central

./: .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/firefight_macro/: Cargo.toml
src-tauri/firefight_macro/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/firefight/: audio.rs  commands.rs  events.rs  local_store.rs  mod.rs  types.rs
src-tauri/src/polly/: client.rs  mod.rs  synthesize.rs
src-tauri/src/torii/: audio.rs  commands.rs  mod.rs  window.rs
src/_components/ActiveOccurrenceCard/: index.tsx
src/_components/Button/: index.tsx
src/_components/CardGrid/: index.tsx
src/_components/FullScreenOverlay/: index.tsx
src/_components/Header/: index.tsx
src/_components/Modal/: index.tsx
src/_consts/: native.ts
src/_state/: lang.ts  store.impl.ts  store.ts  view.ts
src/_utils/: cardStyle.ts  defaultToNbsp.ts  occurrenceSort.ts  openFullViewPanel.ts  permissionToLocale.ts  sendAlert.ts  shortenName.ts  staffRankToInsignia.ts  staffRankToLocale.ts  staffSort.ts  staffStateToLocale.ts  tagStyle.ts  teamSort.ts  teamStateToLocale.ts  useAlertSelection.ts  useDisableContextMenu.ts  useEscapeKey.ts  useResizeWindow.ts  useVersion.ts  vehicleSort.ts  vehicleStateToLocale.ts
src/fvp/: index.html  index.tsx  root.tsx
src/main/: index.tsx  root.tsx
src/main/Alert/: index.tsx
src/overview/: index.tsx  root.tsx
src/settings/: index.tsx  root.tsx
(+36 files in other folders)
