[package]
name = "firefight_central"
version = "0.0.1"
description = ""
authors = ["Jorge Martins"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-polly = { version = "1.3.0" }
tauri = { version = "1.5", features = [ "window-set-size", "updater", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
window-shadows = "0.2.2"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow = "1.0.79"
rodio = "0.17.3"
proc-macro2 = "1.0.76"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.30"
rust_socketio = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
